--- a/src/views/catering.html
+++ b/src/views/catering.html
@@ -19,17 +19,17 @@
         %>
 
         <div class="jumbotron jumbo-picture jumbo-catering text-center">
-            <h1 class="p-5 m-5 display-4">CATERING</h1>
+            <h1 class="p-5 m-5 display-4 animate__animated animate__fadeInRight">CATERING</h1>
         </div>
 
-        <div class="jumbotron container">
+        <div class="jumbotron container animate__animated animate__fadeInUp">
             <h1 class="display-4">Servicio de Catering</h1>
             <p class="lead">Selecto equipo de profesionales con amplia experiencia en el servicio de alimentos, que actualmente vienen desempeñándose en los rubros de gestión gastronómica y de organización de eventos.</p>
             <hr class="my-4">
             <p></p>
             <a class="btn btn-primary btn-lg"
                 target="_blank"
-                href="https://api.whatsapp.com/send?phone=51954600050&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
+                href="https://api.whatsapp.com/send?phone=51965354124&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
                 role="button">Contacto</a>
         </div>
 
