--- a/src/views/distribucion.html
+++ b/src/views/distribucion.html
@@ -19,17 +19,17 @@
         %>
 
         <div class="jumbotron jumbo-picture jumbo-distribucion text-center">
-            <h1 class="p-5 m-5 display-4">DISTRIBUCIÓN DE PRODUCTOS</h1>
+            <h1 class="p-5 m-5 display-4 animate__animated animate__fadeInDown">DISTRIBUCIÓN DE PRODUCTOS</h1>
         </div>
 
-        <div class="jumbotron container">
+        <div class="jumbotron container animate__animated animate__fadeInUp">
             <h1 class="display-4">Servicio de Distribución de Productos en General</h1>
             <p class="lead">Experiencia dedicada a la Fabricación y Venta de Ropa Industrial y Uniformes. Contamos con profesionales especializados y en constante capacitación con el objetivo de brindarle a nuestros clientes modelos únicos y de excelente calidad. Cumplimos con todas las normativas y estándares de calidad.</p>
             <hr class="my-4">
             <p></p>
             <a class="btn btn-primary btn-lg"
                 target="_blank"
-                href="https://api.whatsapp.com/send?phone=51954600050&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
+                href="https://api.whatsapp.com/send?phone=51965354124&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
                 role="button">Contacto</a>
         </div>
 
