--- a/src/views/index.html
+++ b/src/views/index.html
@@ -189,15 +189,15 @@
     <!-- ABOUT US -->
 
     <div id="nosotros"
-      class="about-section animate__animated animate__fadeInLeft">
+      class="about-section">
       <div class="inner-container">
-        <h1 class="display-4 text-left pt-5">¿Quiénes Somos?</h1>
-        <p class="text text-white">Inversiones FOGA E.I.R.L., es una empresa emergente que pone a su disposición una amplia variedad de servicios generales y profesionales. Contamos con personal técnico especializado y altamente capacitado que destaca por sus cualidades tanto personales como profesionales para afrontar los retos presentes y futuros.
+        <h1 class="display-4 text-left pt-5 scroll-nosotros">¿Quiénes Somos?</h1>
+        <p class="text text-white scroll-nosotros">Inversiones FOGA E.I.R.L., es una empresa emergente que pone a su disposición una amplia variedad de servicios generales y profesionales. Contamos con personal técnico especializado y altamente capacitado que destaca por sus cualidades tanto personales como profesionales para afrontar los retos presentes y futuros.
         </p>
         <div class="skills">
-          <span class="text-white"> Experiencia</span>
-          <span class="text-white"> Calidad</span>
-          <span class="text-white"> Confianza</span>
+          <span class="text-white scroll-nosotros"> Experiencia</span>
+          <span class="text-white scroll-nosotros"> Calidad</span>
+          <span class="text-white scroll-nosotros"> Confianza</span>
 
         </div>
       </div>
@@ -205,92 +205,101 @@
 
     <!-- PHOTO GALLERY -->
     <section id="gallery"
-      class="py-4 bg-light">
+      class="py-4 bg-light scroll-gallery">
       <div class="container">
         <h1 class="display-4 text-center py-3">Galería</h1>
 
-        <div class="row mb-4">
-          <div class="col-md-4">
-            <a href="/img/galeria1.jpg"
-              data-toggle="lightbox"
-              data-gallery="img-gallery"
-              data-height="560"
-              data-width="560">
-              <img src="/img/galeria1.jpg"
-                alt=""
-                class="img-fluid" />
-            </a>
-          </div>
-
-          <div class="col-md-4">
-            <a href="/img/galeria2.jpg"
-              data-toggle="lightbox"
-              data-gallery="img-gallery"
-              data-height="561"
-              data-width="561">
-              <img src="/img/galeria2.jpg"
-                alt=""
-                class="img-fluid" />
-            </a>
-          </div>
-
-          <div class="col-md-4">
-            <a href="/img/galeria3.jpg"
-              data-toggle="lightbox"
-              data-gallery="img-gallery"
-              data-height="562"
-              data-width="562">
-              <img src="/img/galeria3.jpg"
-                alt=""
-                class="img-fluid" />
-            </a>
-          </div>
+        <div class="row mb-4"">
+          <div class="
+          col-md-4
+          effect-img">
+          <a href="/img/galeria1.jpg"
+            data-toggle="lightbox"
+            data-gallery="img-gallery"
+            data-height="560"
+            data-width="560">
+            <img src="/img/galeria1.jpg"
+              alt=""
+              class="img-fluid  img-gallery" />
+          </a>
         </div>
 
-        <div class="row mb-4">
-          <div class="col-md-4">
-            <a href="/img/galeria4.jpg"
-              data-toggle="lightbox"
-              data-gallery="img-gallery"
-              data-height="563"
-              data-width="563">
-              <img src="/img/galeria4.jpg"
-                alt=""
-                class="img-fluid" />
-            </a>
-          </div>
-
-          <div class="col-md-4">
-            <a href="/img/galeria5.jpg"
-              data-toggle="lightbox"
-              data-gallery="img-gallery"
-              data-height="564"
-              data-width="564">
-              <img src="/img/galeria5.jpg"
-                alt=""
-                class="img-fluid" />
-            </a>
-          </div>
-
-          <div class="col-md-4">
-            <a href="/img/galeria6.jpg"
-              data-toggle="lightbox"
-              data-gallery="img-gallery"
-              data-height="565"
-              data-width="565">
-              <img src="/img/galeria6.jpg"
-                alt=""
-                class="img-fluid" />
-            </a>
-          </div>
+        <div class="col-md-4 effect-img"">
+            <a href="
+          /img/galeria2.jpg"
+          data-toggle="lightbox"
+          data-gallery="img-gallery"
+          data-height="561"
+          data-width="561">
+          <img src="/img/galeria2.jpg"
+            alt=""
+            class="img-fluid" />
+          </a>
         </div>
+
+        <div class="col-md-4 effect-img"">
+            <a href="
+          /img/galeria3.jpg"
+          data-toggle="lightbox"
+          data-gallery="img-gallery"
+          data-height="562"
+          data-width="562">
+          <img src="/img/galeria3.jpg"
+            alt=""
+            class="img-fluid" />
+          </a>
+        </div>
+      </div>
+
+      <div class="row mb-4"">
+          <div class="
+        col-md-4
+        effect-img">
+        <a href="/img/galeria4.jpg"
+          data-toggle="lightbox"
+          data-gallery="img-gallery"
+          data-height="563"
+          data-width="563">
+          <img src="/img/galeria4.jpg"
+            alt=""
+            class="img-fluid" />
+        </a>
+      </div>
+
+      <div class="col-md-4 effect-img"">
+            <a href="
+        /img/galeria5.jpg"
+        data-toggle="lightbox"
+        data-gallery="img-gallery"
+        data-height="564"
+        data-width="564">
+        <img src="/img/galeria5.jpg"
+          alt=""
+          class="img-fluid" />
+        </a>
+      </div>
+
+      <div class="col-md-4 effect-img">
+        <a href="/img/galeria6.jpg"
+          data-toggle="lightbox"
+          data-gallery="img-gallery"
+          data-height="565"
+          data-width="565">
+          <img src="/img/galeria6.jpg"
+            alt=""
+            class="img-fluid" />
+        </a>
+      </div>
+
+      </div>
       </div>
     </section>
 
+
     <!-- CONTACT INFORMATION -->
 
-    <div class="container">
-
+    <div id="contacto"
+      class="container scroll-contact">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
           <h1 class="display-4 text-center py-3">Contáctanos</h1>
@@ -451,6 +460,8 @@
           event.preventDefault();
           $(this).ekkoLightbox();
         });
+
+
       </script>
 
 </body>
