--- a/src/views/telecomunicaciones.html
+++ b/src/views/telecomunicaciones.html
@@ -19,17 +19,17 @@
         %>
 
         <div class="jumbotron jumbo-picture jumbo-telecomunicaciones text-center">
-            <h1 class="p-5 m-5 display-4">TELECOMUNICACIONES</h1>
+            <h1 class="p-5 m-5 display-4 animate__animated animate__fadeInLeft">TELECOMUNICACIONES</h1>
         </div>
 
-        <div class="jumbotron container">
+        <div class="jumbotron container animate__animated animate__fadeInUp">
             <h1 class="display-4">Servicio de Telecomunicaciones</h1>
             <p class="lead">Nuestro Equipo está integrado por expertos en las Tecnologías más actualizadas del mercado, capaces de entender sus necesidades y crear soluciones inteligentes, rentables y con Garantía de Satisfacción. Estamos dedicados al Diseño, Gestión de Proyectos y Soluciones Integrales en Telecomunicaciones , nuestro Equipo está integrado por Profesionales Multidisciplinarios con Certificaciones Internacionales de las marcas líderes del mercado de las telecomunicaciones y tecnología.</p>
             <hr class="my-4">
             <p></p>
             <a class="btn btn-primary btn-lg"
                 target="_blank"
-                href="https://api.whatsapp.com/send?phone=51954600050&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
+                href="https://api.whatsapp.com/send?phone=51965354124&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n."
                 role="button">Contacto</a>
         </div>
 
