--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -55,13 +55,65 @@ header img {
   display: inline-block;
   /* margin: 0 0.5rem; */
 
-  animation: jello; /* referring directly to the animation's @keyframe declaration */
+  animation: heartBeat; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 2s; /* don't forget to set a duration! */
 
 }
 
 
-/* carousel */
+
+/* NAVBAR */
+.navbar ul li{
+  list-style:none;
+}
+
+.navbar ul li a{
+  text-decoration:none;
+  color:#4d4d4d;
+  font-size:15px;
+  display:block;
+  padding:5px 10px;
+  position:relative;
+  text-transform:uppercase;
+  margin:0 10px;
+  transition: all .5s;
+} 
+.navbar ul li a:before{
+  content:'';
+  position:absolute;
+  bottom:12px;
+  left:12px;
+  width:12px;
+  height:12px;
+  border:3px solid #e91e63;
+  border-width:0 0 3px 3px;
+  opacity:0;
+  transition:all 0.3s;
+}
+.navbar ul li a:hover:before{
+  opacity:1;
+  bottom:-5px;
+  left:-5px;
+}
+.navbar ul li a:after{
+  content:'';
+  position:absolute;
+  top:12px;
+  right:12px;
+  width:12px;
+  height:12px;
+  border:3px solid #e91e63;
+  border-width:3px 3px 0 0;
+  opacity:0;
+  transition: all 0.3s;
+}
+.navbar ul li a:hover:after{
+  opacity:1;
+  top:-7px;
+  right:-7px;
+}
+
+/* CAROUSEL */
 
 .carousel-item {
   height: 450px;
@@ -87,92 +139,13 @@ header img {
   font-family: 'Lato', sans-serif;
 }
 
-/* titles */
+/* SERVICES */
 
-.hrl {
-  border: 0;
-  height: 0;
-  box-shadow: 0 0 5px 0.5px black;
-}
-
-/* footer */
-
-footer {
-  color: white;
-}
-
-footer img {
-  width: 160px;
-}
-
-/* navbar */
-
-ul li{
-  list-style:none;
-}
-
-ul li a{
-  text-decoration:none;
-  color:#4d4d4d;
-  font-size:15px;
-  display:block;
-  padding:5px 10px;
-  position:relative;
-  text-transform:uppercase;
-  margin:0 10px;
-  transition: all .5s;
-} 
-ul li a:hover{
-  background-color: #ce8f65;
-  color: white;
-}
-ul li a:before{
-  content:'';
-  position:absolute;
-  bottom:12px;
-  left:12px;
-  width:12px;
-  height:12px;
-  border:3px solid #e91e63;
-  border-width:0 0 3px 3px;
-  opacity:0;
-  transition:all 0.3s;
-}
-ul li a:hover:before{
-  opacity:1;
-  bottom:-5px;
-  left:-5px;
-}
-ul li a:after{
-  content:'';
-  position:absolute;
-  top:12px;
-  right:12px;
-  width:12px;
-  height:12px;
-  border:3px solid #e91e63;
-  border-width:3px 3px 0 0;
-  opacity:0;
-  transition: all 0.3s;
-}
-ul li a:hover:after{
-  opacity:1;
-  top:-7px;
-  right:-7px;
-}
-
-/* navbar */
-
-
-/* Servicios */
-
-/*----  Main Style  ----*/
 #cards_landscape_wrap-2{
   text-align: center;
   background: #F7F7F7;
 }
 #cards_landscape_wrap-2 .container{
-  /* padding-top: 80px;  */
   padding-bottom: 80px;
 }
 #cards_landscape_wrap-2 a{
@@ -250,6 +223,90 @@ ul li a:hover:after{
   color: #00acc1;
 }
 
+/* ABOUT US */
+
+.about-section {
+  background:url("/../img/aboutus.jpg") no-repeat left;;
+  background-size:50%;
+
+  background-color: #30a0a2;;
+  overflow:hidden;
+  padding:100px 0;  
+}
+
+.inner-container {
+  width:50%;
+  float:right;
+  background:#30a0a2;
+  padding:50px;
+}
+
+.inner-container h1 {
+  margin-bottom:30px;
+  /* font-size:30px; */
+  font-weight:900;
+}
+
+.text {
+  font-size:18px;
+  color:#545454;
+  line-height:30px;
+  text-align:justify;
+  margin-bottom:40px;
+}
+
+.skills {
+  display: flex;
+  justify-content: space-around;
+  font-weight:700;
+  font-size:15px;
+  color:black;
+}
+
+ @media screen and (max-width:1200px){   
+   .inner-container {
+     padding:80px;
+   }   
+}
+
+ @media screen and (max-width:1000px){   
+   .about-section {
+     background-size:100%;
+     padding:100px  40px;
+   }   
+   .inner-container {
+     width:100%;
+   }   
+}
+
+ @media screen and (max-width:600px){
+   
+   .about-section {
+     padding:0;
+   }
+   
+   .inner-container {
+     padding:60px;
+   }
+     
+}
+
+/* GALLERY */
+
+.effect-img img {
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: translate3d(0,0,300px);
+	transform: translate3d(0,0,300px);
+}
+
+.effect-img:hover img {
+	opacity: 0.6;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
+
+
 /* CONTACT */
 
 #success-message {
@@ -306,7 +363,6 @@ textarea {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding: 4px 13px;
-    /* color: #fff; */
     background: rgba(34,34,34, .9);
     border: 1px solid transparent;
     font-size: 11px;
@@ -343,82 +399,6 @@ textarea {
     .form-title {
         font-size: 20px;
   }
-}
-
-
-/* ABOUT US */
-
-
-.about-section {
-  background:url("/../img/aboutus.jpg") no-repeat left;;
-  background-size:50%;
-
-  background-color: #30a0a2;;
-  overflow:hidden;
-  padding:100px 0;
-  
-}
-
-.inner-container {
-  width:50%;
-  float:right;
-  background:#30a0a2;
-  padding:50px;
-}
-
-.inner-container h1 {
-  margin-bottom:30px;
-  /* font-size:30px; */
-  font-weight:900;
-}
-
-.text {
-  font-size:18px;
-  color:#545454;
-  line-height:30px;
-  text-align:justify;
-  margin-bottom:40px;
-}
-
-
-.skills {
-  display: flex;
-  justify-content: space-around;
-  font-weight:700;
-  font-size:15px;
-  color:black;
-
-}
-
-
- @media screen and (max-width:1200px){   
-   .inner-container {
-     padding:80px;
-   }   
-}
-
- @media screen and (max-width:1000px){   
-   .about-section {
-     background-size:100%;
-     padding:100px  40px;
-   }
-   
-   .inner-container {
-     width:100%;
-   }
-   
-}
-
- @media screen and (max-width:600px){
-   
-   .about-section {
-     padding:0;
-   }
-   
-   .inner-container {
-     padding:60px;
-   }
-     
 }
 
 
@@ -475,14 +455,14 @@ footer.light .footer-copyright{	background: none repeat scroll 0 0 rgba(255, 255
 .typo-light h4, 
 .typo-light h5, 
 .typo-light h6,
-.typo-light p,
+/* .typo-light p, */
 .typo-light div,
 .typo-light span,
 .typo-light small{	color: #fff;}
 
 ul.social-footer2 {	margin: 0;padding: 0;	width: auto;}
 ul.social-footer2 li {display: inline-block;padding: 0;}
-ul.social-footer2 li a:hover {background-color:#ff8d1e;}
+/* ul.social-footer2 li a:hover {background-color:#ff8d1e;} */
 ul.social-footer2 li a {display: block;	height:30px;width: 30px;text-align: center;}
 .btn{background-color: #ff8d1e; color:#fff;}
 .btn:hover, .btn:focus, .btn.active {background: #4b92dc;color: #fff;
@@ -501,6 +481,10 @@ transition: all 250ms ease-in-out 0s;
 
 .parserlogo {
   width: 100px;
+}
+
+.ubicanos-footer{
+  color: #ff8d1e;
 }
 
 /* JUMBOTRON */
