--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -46,19 +46,19 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="widget no-box">
-                        <h5 class="widget-title">Navegacion<span></span></h5>
+                        <h5 class="widget-title">Navegación<span></span></h5>
                         <ul class="thumbnail-widget">
                             <li>
                                 <div class="thumb-content"><a href="/">Inicio</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="#.">Servicios</a></div>
+                                <div class="thumb-content"><a href="/">Servicios</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="#.">Nosotros</a></div>
+                                <div class="thumb-content"><a href="/#nosotros">Nosotros</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="#.">Galería</a></div>
+                                <div class="thumb-content"><a href="/#gallery">Galería</a></div>
                             </li>
                         </ul>
                     </div>
@@ -66,11 +66,10 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="widget no-box">
-                        <h5 class="widget-title">Get Started<span></span></h5>
-                        <p>Get access to your full Training and Marketing Suite.</p>
-                        <a class="btn"
-                            href="#."
-                            target="_blank">Register Now</a>
+                        <h5 class="widget-title">Ubícanos<span></span></h5>
+                        <p class="ubicanos-footer"> <span class="fas fa-map-marker-alt"> </span> Circuito Los Héroes 355 - El Tambo</p>
+                        <p class="ubicanos-footer"> <span class="fas fa-phone-alt"> </span> Celular: 965354124</p>
+                        <p class="ubicanos-footer"> <span class="fas fa-envelope"> </span> gerencia@inversionesfoga.com</p>
                     </div>
                 </div>
 
@@ -138,3 +137,10 @@
     integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
+<script>
+    window.sr = ScrollReveal()
+    // sr.reveal('.navbar', { duration: 100 });
+    sr.reveal('.scroll-nosotros', { duration: 3000, origin: 'right', distance: '500px' });
+    sr.reveal('.scroll-gallery', { duration: 3000, origin: 'left', distance: '500px' });
+    sr.reveal('.scroll-contact', { duration: 3000, origin: 'right', distance: '500px' });
+</script>
