--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -33,3 +33,5 @@
     href="img/favicon-16x16.png">
 <link rel="manifest"
     href="/site.webmanifest">
+
+<script src="https://unpkg.com/scrollreveal"></script>
