--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -70,7 +70,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
-                        href="/contact">Contacto</a>
+                        href="/#contacto">Contacto</a>
                 </li>
             </ul>
 
