--- a/src/views/distribucion.html
+++ b/src/views/distribucion.html
@@ -24,7 +24,7 @@
 
         <div class="jumbotron container animate__animated animate__fadeInUp">
             <h1 class="display-4">Servicio de Distribución de Productos en General</h1>
-            <p class="lead">Experiencia dedicada a la Fabricación y Venta de Ropa Industrial y Uniformes. Contamos con profesionales especializados y en constante capacitación con el objetivo de brindarle a nuestros clientes modelos únicos y de excelente calidad. Cumplimos con todas las normativas y estándares de calidad.</p>
+            <p class="lead">Estamos especializados en operación logística para clientes exigentes y para todos aquellos dispuestos a solucionar una necesidad en el menor tiempo posible con el mejor trato de por medio.</p>
             <hr class="my-4">
             <p></p>
             <a class="btn btn-primary btn-lg"
