--- a/src/views/licitaciones.html
+++ b/src/views/licitaciones.html
@@ -24,7 +24,7 @@
 
         <div class="jumbotron container animate__animated animate__fadeInUp">
             <h1 class="display-4">Servicio de Licitaciones en General</h1>
-            <p class="lead">Somos especialistas en el rubro de las licitaciones , con experiencia y calidad en el cumplimiento de los requerimientos solicitados.electo equipo de profesionales con amplia experiencia en el servicio de alimentos, que actualmente vienen desempeñándose en los rubros de gestión gastronómica y de organización de eventos.</p>
+            <p class="lead">Somos especialistas en el rubro de las licitaciones , con experiencia y calidad en el cumplimiento de los requerimientos solicitados.</p>
             <hr class="my-4">
             <p></p>
             <a class="btn btn-primary btn-lg"
