--- a/src/views/index.html
+++ b/src/views/index.html
@@ -313,7 +313,7 @@
           <form id="contact-form"
             name="myForm"
             class="form"
-            action="#"
+            action="/"
             onsubmit="return validateForm()"
             method="POST"
             role="form">
@@ -369,7 +369,7 @@
 
             <div class="text-center my-3">
               <button type="submit"
-                class="btn btn-mod btn-border btn-large">Enviar mensaje</button>
+                class="btn btn-mod btn-border btn-large">Enviar mensajeeeee</button>
             </div>
 
           </form><!-- End form -->
@@ -379,6 +379,8 @@
       </div><!-- End row -->
 
     </div><!-- End container -->
+
+
 
 
     <!-- FOOTER -->
@@ -391,64 +393,6 @@
 
       <!-- JS SCRIPTS -->
       <script>
-        function validateForm() {
-          var n = document.getElementById('name').value;
-          var e = document.getElementById('email').value;
-          var s = document.getElementById('subject').value;
-          var m = document.getElementById('message').value;
-          var onlyLetters = /^[a-zA-Z\s]*$/;
-          var onlyEmail = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-
-
-          if (n == "" || n == null) {
-            document.getElementById('nameLabel').innerHTML = ('Ingresa tu nombre por favor');
-            document.getElementById('name').style.borderColor = "red";
-            return false;
-          }
-
-
-          if (!n.match(onlyLetters)) {
-            document.getElementById('nameLabel').innerHTML = ('Ingresa solo letras por favor');
-            document.getElementById('name').style.borderColor = "red";
-            return false;
-          }
-
-          if (e == "" || e == null) {
-            document.getElementById('emailLabel').innerHTML = ('Ingresa tu email por favor');
-            document.getElementById('email').style.borderColor = "red";
-            return false;
-          }
-
-          if (!e.match(onlyEmail)) {
-            document.getElementById('emailLabel').innerHTML = ('Ingresa una cuenta de email valida por favor');
-            document.getElementById('email').style.borderColor = "red";
-            return false;
-          }
-
-          if (s == "" || s == null) {
-            document.getElementById('subjectLabel').innerHTML = ('Please enter your subject');
-            document.getElementById('subject').style.borderColor = "red";
-            return false;
-          }
-
-          if (!s.match(onlyLetters)) {
-            document.getElementById('subjectLabel').innerHTML = ('Please enter only letters');
-            document.getElementById('subject').style.borderColor = "red";
-            return false;
-          }
-
-          if (m == "" || m == null) {
-            document.getElementById('messageLabel').innerHTML = ('Please enter your message');
-            document.getElementById('message').style.borderColor = "red";
-            return false;
-          }
-
-          else {
-            return true;
-          }
-
-        }
-
         //Carousel
         $(".carousel").carousel({
           interval: 5000,
@@ -463,8 +407,7 @@
 
 
       </script>
-
+      <script src="/js/app.js"></script>
 </body>
-
 
 </html>
