--- a/src/views/index.html
+++ b/src/views/index.html
@@ -369,7 +369,7 @@
 
             <div class="text-center my-3">
               <button type="submit"
-                class="btn btn-mod btn-border btn-large">Enviar mensajeeeee</button>
+                class="btn btn-mod btn-border btn-large">Enviar mensaje</button>
             </div>
 
           </form><!-- End form -->
