--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -109,11 +109,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center">
-                    <p>Copyright Parserperu.com © 2021. All rights reserved.</p>
+                    <p>Copyright InversionesFoga.com © 2021. Todos los derechos reservados.</p>
                 </div>
                 <div class="col-md-6 text-center">
                     <a target="_blank"
-                        href="https://api.whatsapp.com/send?phone=51973303384&text=Hola!%20Quisiera%20m%C3%A1s%20informaci%C3%B3n.">
+                        href="https://parserweb.com">
                         <img class="parserlogo"
                             src="img/parserlogo.png"
                             alt="">
