--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -115,7 +115,7 @@
                     <a target="_blank"
                         href="https://parserweb.com">
                         <img class="parserlogo"
-                            src="img/parserlogo.png"
+                            src="img/parserlogo2.png"
                             alt="">
                     </a>
                 </div>
